--- a/index.html
+++ b/index.html
@@ -1,60 +1,177 @@
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Real Estate Navbar</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Real Estate Site</title>
+  <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@700&display=swap" rel="stylesheet">
+  <link
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+  rel="stylesheet"
+  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+  crossorigin="anonymous"
+/>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <nav class="navbar navbar-expand-lg fixed-top">
-        <div class="container">
-            <a class="navbar-brand fw-bold" href="#">RealEstatePro</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end d-none d-lg-flex">
-                <ul class="navbar-nav mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fas fa-home"></i> Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fas fa-user"></i> About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://wa.me/923001234567" target="_blank"><i class="fab fa-whatsapp"></i> Consultation</a>
-                    </li>
-                </ul>
-            </div>
+  <nav class="navbar">
+    <div class="logo">MySite</div>
+    <div class="hamburger" id="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <ul class="nav-links" id="navLinks">
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Properties</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </nav>
 
-            <div class="offcanvas offcanvas-end d-lg-none" tabindex="-1" id="offcanvasNavbar">
-                <div class="offcanvas-header">
-                    <h5 class="offcanvas-title">Menu</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
-                </div>
-                <div class="offcanvas-body">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#"><i class="fas fa-home"></i> Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#"><i class="fas fa-user"></i> About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://wa.me/923001234567" target="_blank"><i class="fab fa-whatsapp"></i> Consultation</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+  <div class="mobile-nav" id="mobileNav">
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Listings</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </div>
+
+  
+  <section class="hero-section">
+    <div class="hero-text">
+      <h1 class="main-heading2">REAL ESTATE<span class="dot">.</span></h1>
+      <p class="tagline">Building Dreams. Creating Future.</p>
+    </div>
+  </section>
+
+  <!-- cards --> <section class="gallery-section">
+    <h2 style="text-align: center; margin-bottom: 30px; font-size: 2rem;">Our Cinematic Moments</h2>
+    <div class="gallery-container">
+      <div class="auto-scroll-wrapper">
+        <div class="image-card">
+          <img src="https://images.unsplash.com/photo-1665322939311-c881c44193ab?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8TW9kZXJuJTIwVmlsbGElMjBwYWtpc3RhbiUyMGlzbGFtYWJhZHxlbnwwfDF8MHx8fDI%3D" alt="House">
+          <div class="image-overlay">Modern Villa</div>
         </div>
-    </nav>
+        <div class="image-card">
+          <img src="https://images.unsplash.com/photo-1664305204878-1fdc85af0d7e?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8THV4dXJ5JTIwSW50ZXJpb3JwYWtpc3RhbiUyMGlzbGFtYWJhZHxlbnwwfDF8MHx8fDI%3D" alt="Interior">
+          <div class="image-overlay">Luxury Interior</div>
+        </div>
+        <div class="image-card">
+          <img src="https://images.unsplash.com/photo-1553071239-3eb8a88511b2?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8RXN0YXRlJTIwVmlld3xlbnwwfDF8MHx8fDI%3D" alt="Real Estate">
+          <div class="image-overlay">Estate View</div>
+        </div>
+        <div class="image-card">
+          <img src="https://images.unsplash.com/photo-1623261216813-fbbe4fb7df44?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8QXJjaGl0ZWN0dXJlJTIwcGFraXN0YW4lMjBpc2xhbWFiYWR8ZW58MHwxfDB8fHwy" alt="Architecture">
+          <div class="image-overlay">Architecture</div>
+        </div>
+        <div class="image-card">
+          <img src="https://images.unsplash.com/photo-1661099548731-fc8f74fc9dd9?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTd8fGVsZWdlbnQlMjByb29tfGVufDB8MXwwfHx8Mg%3D%3D" alt="Room">
+          <div class="image-overlay">Elegant Room</div>
+        </div>
+        <!-- Repeat or duplicate for longer scroll -->
+        <div class="image-card">
+          <img src="https://images.unsplash.com/photo-1704713836408-5d6da14af6ba?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8U3Vuc2V0JTIwQmFsY29ufGVufDB8MXwwfHx8Mg%3D%3D" alt="Balcony">
+          <div class="image-overlay">Sunset Balcony</div>
+        </div>
+      </div>
+    </div>
+  </section>
+<!-- crds -->
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./script.js"></script>
+
+<!-- cta -->  <section class="realestate-hero-wrapper">
+    <h1 class="realestate-main-heading">Find Your Dream Properties</h1>
+    <p class="realestate-subtext">We help you Buy & Sell Properties with Trust, Transparency & Technology.</p>
+
+    <div class="realestate-action-section">
+      <div class="realestate-card">
+        <h2 class="realestate-card-title">Buy Property</h2>
+        <p class="realestate-card-description">Explore best deals in your city with verified listings.</p>
+      </div>
+      <div class="realestate-card">
+        <h2 class="realestate-card-title">Sell Property</h2>
+        <p class="realestate-card-description">List your property with us and reach genuine buyers fast.</p>
+      </div>
+    </div>
+
+    <a class="realestate-whatsapp-btn" href="https://wa.me/923130094251" target="_blank">
+      📞 WhatsApp 0313 0094251
+    </a>
+  </section>
+
+  <!-- cta  -->
+
+  
+  
+  <section id="trust-transparency" class="trust-section">
+    <div class="trust-container">
+      <h2 class="trust-title">Trust & Transparency</h2>
+      <p class="trust-subtitle">We value your trust more than anything.</p>
+      
+      <div class="trust-cards">
+        <div class="trust-card">
+          <i class="fas fa-shield-alt trust-icon"></i>
+          <h3>No Hidden Charges</h3>
+          <p>Everything is transparent. No extra commission, no hidden fees.</p>
+        </div>
+        <div class="trust-card">
+          <i class="fas fa-user-check trust-icon"></i>
+          <h3>Verified Listings</h3>
+          <p>Each property is verified manually to avoid any scams or fake deals.</p>
+        </div>
+        <div class="trust-card">
+          <i class="fas fa-file-contract trust-icon"></i>
+          <h3>Legal Assistance</h3>
+          <p>We help you with all legal documents and secure contracts.</p>
+        </div>
+        <div class="trust-card">
+          <i class="fas fa-thumbs-up trust-icon"></i>
+          <h3>Client Testimonials</h3>
+          <p>Our clients trust us. Read their stories to believe it yourself.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <footer class="realestate-footer">
+    <div class="footer-container">
+      <div class="footer-brand">
+        <h2>🏡 Rehman Real Estate</h2>
+        <p>Pakistan's Trusted Property Partner. Safe, Transparent, and Reliable Real Estate Deals.</p>
+      </div>
+  
+      <div class="footer-links">
+        <h4>Quick Links</h4>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Buy Property</a></li>
+          <li><a href="#">Sell Property</a></li>
+          <li><a href="#">Fraud Alerts</a></li>
+          <li><a href="#">Contact Us</a></li>
+        </ul>
+      </div>
+  
+      <div class="footer-social">
+        <h4>Follow Us</h4>
+        <div class="social-icons">
+          <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+          <a href="#"><i class="fa-brands fa-instagram"></i></a>
+          <a href="#"><i class="fa-brands fa-youtube"></i></a>
+          <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+        </div>
+      </div>
+    </div>
+  
+    <div class="footer-bottom">
+      <p>© 2025 Rehman Real Estate. All rights reserved.</p>
+    </div>
+  </footer>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <script src="script.js"></script>
+  
 </body>
-
 </html>
