--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Real Estate Site</title>
   <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@700&display=swap" rel="stylesheet">
-  <link
-  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-  rel="stylesheet"
-  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-  crossorigin="anonymous"
-/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <nav class="navbar">
     <div class="logo">MySite</div>
@@ -24,8 +22,8 @@
     </div>
     <ul class="nav-links" id="navLinks">
       <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Properties</a></li>
+      <li><a href="./pages/about.html">About</a></li>
+      <li><a href="./pages/prop.html">Properties</a></li>
       <li><a href="#">Contact</a></li>
     </ul>
   </nav>
@@ -33,13 +31,13 @@
   <div class="mobile-nav" id="mobileNav">
     <ul>
       <li><a href="#">Home</a></li>
-      <li><a href="#">Listings</a></li>
-      <li><a href="#">About</a></li>
+      <li><a href="./pages/prop.html">Listings</a></li>
+      <li><a href="./pages/about.html">About</a></li>
       <li><a href="#">Contact</a></li>
     </ul>
   </div>
 
-  
+
   <section class="hero-section">
     <div class="hero-text">
       <h1 class="main-heading2">REAL ESTATE<span class="dot">.</span></h1>
@@ -47,42 +45,56 @@
     </div>
   </section>
 
-  <!-- cards --> <section class="gallery-section">
+  <!-- cards -->
+  <section class="gallery-section">
     <h2 style="text-align: center; margin-bottom: 30px; font-size: 2rem;">Our Cinematic Moments</h2>
     <div class="gallery-container">
       <div class="auto-scroll-wrapper">
         <div class="image-card">
-          <img src="https://images.unsplash.com/photo-1665322939311-c881c44193ab?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8TW9kZXJuJTIwVmlsbGElMjBwYWtpc3RhbiUyMGlzbGFtYWJhZHxlbnwwfDF8MHx8fDI%3D" alt="House">
+          <img
+            src="https://images.unsplash.com/photo-1665322939311-c881c44193ab?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8TW9kZXJuJTIwVmlsbGElMjBwYWtpc3RhbiUyMGlzbGFtYWJhZHxlbnwwfDF8MHx8fDI%3D"
+            alt="House">
           <div class="image-overlay">Modern Villa</div>
         </div>
         <div class="image-card">
-          <img src="https://images.unsplash.com/photo-1664305204878-1fdc85af0d7e?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8THV4dXJ5JTIwSW50ZXJpb3JwYWtpc3RhbiUyMGlzbGFtYWJhZHxlbnwwfDF8MHx8fDI%3D" alt="Interior">
+          <img
+            src="https://images.unsplash.com/photo-1664305204878-1fdc85af0d7e?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8THV4dXJ5JTIwSW50ZXJpb3JwYWtpc3RhbiUyMGlzbGFtYWJhZHxlbnwwfDF8MHx8fDI%3D"
+            alt="Interior">
           <div class="image-overlay">Luxury Interior</div>
         </div>
         <div class="image-card">
-          <img src="https://images.unsplash.com/photo-1553071239-3eb8a88511b2?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8RXN0YXRlJTIwVmlld3xlbnwwfDF8MHx8fDI%3D" alt="Real Estate">
+          <img
+            src="https://images.unsplash.com/photo-1553071239-3eb8a88511b2?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8RXN0YXRlJTIwVmlld3xlbnwwfDF8MHx8fDI%3D"
+            alt="Real Estate">
           <div class="image-overlay">Estate View</div>
         </div>
         <div class="image-card">
-          <img src="https://images.unsplash.com/photo-1623261216813-fbbe4fb7df44?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8QXJjaGl0ZWN0dXJlJTIwcGFraXN0YW4lMjBpc2xhbWFiYWR8ZW58MHwxfDB8fHwy" alt="Architecture">
+          <img
+            src="https://images.unsplash.com/photo-1623261216813-fbbe4fb7df44?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8QXJjaGl0ZWN0dXJlJTIwcGFraXN0YW4lMjBpc2xhbWFiYWR8ZW58MHwxfDB8fHwy"
+            alt="Architecture">
           <div class="image-overlay">Architecture</div>
         </div>
         <div class="image-card">
-          <img src="https://images.unsplash.com/photo-1661099548731-fc8f74fc9dd9?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTd8fGVsZWdlbnQlMjByb29tfGVufDB8MXwwfHx8Mg%3D%3D" alt="Room">
+          <img
+            src="https://images.unsplash.com/photo-1661099548731-fc8f74fc9dd9?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTd8fGVsZWdlbnQlMjByb29tfGVufDB8MXwwfHx8Mg%3D%3D"
+            alt="Room">
           <div class="image-overlay">Elegant Room</div>
         </div>
         <!-- Repeat or duplicate for longer scroll -->
         <div class="image-card">
-          <img src="https://images.unsplash.com/photo-1704713836408-5d6da14af6ba?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8U3Vuc2V0JTIwQmFsY29ufGVufDB8MXwwfHx8Mg%3D%3D" alt="Balcony">
+          <img
+            src="https://images.unsplash.com/photo-1704713836408-5d6da14af6ba?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8U3Vuc2V0JTIwQmFsY29ufGVufDB8MXwwfHx8Mg%3D%3D"
+            alt="Balcony">
           <div class="image-overlay">Sunset Balcony</div>
         </div>
       </div>
     </div>
   </section>
-<!-- crds -->
+  <!-- crds -->
 
 
-<!-- cta -->  <section class="realestate-hero-wrapper">
+  <!-- cta -->
+  <section class="realestate-hero-wrapper">
     <h1 class="realestate-main-heading">Find Your Dream Properties</h1>
     <p class="realestate-subtext">We help you Buy & Sell Properties with Trust, Transparency & Technology.</p>
 
@@ -104,13 +116,13 @@
 
   <!-- cta  -->
 
-  
-  
+
+
   <section id="trust-transparency" class="trust-section">
     <div class="trust-container">
       <h2 class="trust-title">Trust & Transparency</h2>
       <p class="trust-subtitle">We value your trust more than anything.</p>
-      
+
       <div class="trust-cards">
         <div class="trust-card">
           <i class="fas fa-shield-alt trust-icon"></i>
@@ -142,7 +154,7 @@
         <h2>🏡 Rehman Real Estate</h2>
         <p>Pakistan's Trusted Property Partner. Safe, Transparent, and Reliable Real Estate Deals.</p>
       </div>
-  
+
       <div class="footer-links">
         <h4>Quick Links</h4>
         <ul>
@@ -153,7 +165,7 @@
           <li><a href="#">Contact Us</a></li>
         </ul>
       </div>
-  
+
       <div class="footer-social">
         <h4>Follow Us</h4>
         <div class="social-icons">
@@ -164,7 +176,7 @@
         </div>
       </div>
     </div>
-  
+
     <div class="footer-bottom">
       <p>© 2025 Rehman Real Estate. All rights reserved.</p>
     </div>
@@ -172,6 +184,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <script src="script.js"></script>
-  
+
 </body>
+
 </html>
